# obs-rvc

./: .gitmodules  Cargo.toml  README.md
obs-rvc/: Cargo.toml
obs-rvc/src/: bufferpool.rs  lib.rs  ndarray_ext.rs  obs_props_ext.rs  rt_utils.rs  rvcadapter.rs
obs-rvc/src/tests/: envelop_infer_wav.npy  envelop_infer_wav2.npy  envelop_input_wav.npy  envelop_mixing.rs  envelop_rms1.npy  envelop_rms2.npy  infer_wav.npy  mod.rs  sola.rs  sola_buffer.npy
rvc/: Cargo.toml
rvc-common/: Cargo.toml
rvc-common/src/: enums.rs  lib.rs  obs_props_ext.rs
rvc-rpc/: Cargo.toml
rvc-rpc/src/: main.rs
rvc/src/: enums.rs  lib.rs  models.rs  rvc.rs
rvc/src/f0/: mod.rs  rmvpe.rs
rvc/src/tests/: feats.npy  hubert.rs  input_wav.npy  input_wav2.npy  mod.rs  pitch.rs
src/: lib.rs  lib.rs.bak  obs_props_ext.rs  resample.rs  rt_utils.rs  rvc.rs
src/rvc/: enums.rs  errors.rs  mod.rs  models.rs  rvc.rs
src/rvc/f0/: mod.rs  rmvpe.rs  utils.rs
