[package]
name = "obs-rvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
obs-wrapper = { version = "0.4.1", path = "./vendor/obs-wrapper" }
ort = { version = "2.0.0-rc.2", features = ["download-binaries", "copy-dylibs", "half", "load-dynamic", "cuda", "tensorrt", "openvino", "directml"] }
rustfft = "6.2.0"
ndarray = "0.15.6"
ndarray-conv = "0.3.3"
parking_lot = "0.12.2"
rubato = "0.15.0"
mel_spec = "0.2.2"
num-complex = "0.4.5"
ndarray-stats = "0.5.1"
ndarray-rand = "0.14.0"

[lib]
name = "obsrvc"
crate-type = ["cdylib"]
