[package]
name = "rvc-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", default-features = false }
ort = { version = "2.0.0-rc.2", default-features = false }
obs-wrapper = { version = "0.4.1", path = "../vendor/obs-wrapper", optional = true }

[features]
obs_props = ["dep:obs-wrapper"]
