[package]
name = "rvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvc-common = { path = "../rvc-common" }
ort = { version = "2.0.0-rc.2", default-features = false }
rustfft = "6.2.0"
ndarray = { version = "0.15.6" }
ndarray-conv = "0.3.3"
rubato = "0.15.0"
mel_spec = "0.2.2"
num-complex = "0.4.5"
ndarray-stats = "0.5.1"
ndarray-rand = "0.14.0"
